--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
-    "material-components-web": "^0.38.2",
     "vue": "^2.5.17",
     "vue-loader": "14.2.2",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.17"
   },
